--- a/tarea-galeria-img/styles/styles.css
+++ b/tarea-galeria-img/styles/styles.css
@@ -1,39 +1,35 @@
 body {
   margin: 24px;
+  background-image: url(../img/patron-fondo-vector.svg);
 }
 
 header {
   display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
 h1 {
   font-family: Helvetica, Arial, Tahoma, sans-serif;
-  font-size: 3em;
+  font-size: 2em;
   font-weight: lighter;
   color: black;
-
-}
-
-.palmera {
-  margin-left: 1em;
-  width: 3%;
-}
-
-.hotel-gransol {
-  width: 4%;
+  margin: 2em 2em 4em 1em;
 }
 
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.5em;
-  max-width: 980px;
+  max-width: 1400px;
+  gap: 10px;
+  row-gap: 40px;
   margin: 0 auto;
   justify-content: center;
-  align-items: center;   
+  align-items: center;
   margin-top: 2em;
+}
+
+.gallery-item {
+  position: relative;    
+  overflow: hidden;     
 }
 
 .gallery-item img {
@@ -45,13 +41,58 @@ h1 {
   transition: filter 0.3s ease;
 }
 
+.gallery-item.full-width {
+  grid-column: 1/-1;
+  width: 100%;
+  height: auto;
+  display: block;
+  height: 200px;
+  overflow: hidden;
+}
+
 .gallery-item:hover img {
   filter: none;
   cursor: pointer;
 }
 
-.gif-playa-castillo-paella {
-  width: 10%;
-  display: block;
-  margin: 2em auto;
+.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: .5s ease;
+  background-color: #000000;
+  display: flex;
+  justify-content: center;  
+  align-items: center;       
+}
+
+.gallery-item:hover .overlay {
+  transform: translateY(0);
+  pointer-events: auto; 
+  height: 100%;
+  opacity: 80%;
+}
+
+.overlay .text {
+  color: #fff;
+  font-family: Helvetica, Geneva, Tahoma, sans-serif;
+  font-weight: 100;
+  font-size: 18px;
+  white-space: normal;
+  text-align: center;
+  padding: 0.5rem 1rem;
+  white-space: normal;
+  color: white;
+  font-size: 2em;
+  opacity: 0;             
+  transition: opacity 0.6s ease; 
+}
+
+.gallery-item:hover .overlay .text {
+  opacity: 1;
 }
